--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# OSX files
+.DS_Store
+
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -10,3 +13,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Local configuration
+environment/localcfg/db_username
+environment/localcfg/db_password
+
+# Local enviroment
+environment/tomcat/*
