--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .DS_Store
 
 *.class
+target
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -20,3 +21,9 @@ environment/localcfg/db_password
 
 # Local enviroment
 environment/tomcat/*
+environment/maven/*
+environment/ant/*
+
+# IntelliJ IDEA
+.idea
+*.iml
