--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>larskristian.net</groupId>
+  <groupId>net.larskristian</groupId>
   <artifactId>website.parent</artifactId>
-  <packaging>war</packaging>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>larskristian.net</name>
+  <modules>
+    <module>core</module>
+    <module>web-app</module>
+    <module>unit-tests</module>
+    <module>integration-tests</module>
+  </modules>
+
+  <developers>
+    <developer>
+      <id>lars.johansen</id>
+      <name>Lars Johansen</name>
+      <email>larskrjo@gmail.com</email>
+      <roles>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
+    </developer>
+  </developers>
 
   <properties>
+    <!-- Root dir -->
+    <root.dir>${basedir}</root.dir>
     <!-- Core -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.version>1.0-SNAPSHOT</project.version>
     <spring.version>4.1.1.RELEASE</spring.version>
     <maven.compiler.version>3.2</maven.compiler.version>
 
     <!-- Testing -->
     <maven.surefire.version>2.18.1</maven.surefire.version>
+    <junit.version>4.12</junit.version>
 
     <!-- Reporting -->
     <maven.jxr.version>2.3</maven.jxr.version>
@@ -24,22 +45,23 @@
 
     <!-- Deployment -->
     <maven.tomcat.version>2.2</maven.tomcat.version>
+    <maven.war.version>2.6</maven.war.version>
 
     <!-- Dependencies -->
-    <junit.version>4.11</junit.version>
     <javax.jsp.version>2.1</javax.jsp.version>
     <javax.servlet.version>3.0.1</javax.servlet.version>
 
   </properties>
 
-  <repositories>
+  <!--<repositories>
     <repository>
       <id>my-internal-site</id>
       <url>http://larskristian.net:8082/repo</url>
     </repository>
-  </repositories>
+  </repositories>-->
 
   <dependencies>
+
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-core</artifactId>
@@ -59,13 +81,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <version>${spring.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>${javax.servlet.version}</version>
@@ -78,12 +93,6 @@
       <scope>provided</scope>
     </dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <reporting>
@@ -115,7 +124,6 @@
   </reporting>
 
   <build>
-    <finalName>larskristian.net</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -125,37 +133,6 @@
           <source>1.6</source>
           <target>1.6</target>
         </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>${maven.surefire.version}</version>
-        <configuration>
-          <includes>
-            <include>**/*Tests.java</include>
-          </includes>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>${jacoco.version}</version>
-        <executions>
-          <execution>
-            <id>pre-unit-test</id>
-            <goals>
-              <goal>prepare-agent</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>post-unit-test</id>
-            <phase>test</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
 
       <plugin>
@@ -172,4 +149,33 @@
       </plugin>
     </plugins>
   </build>
+
+  <profiles>
+    <profile>
+      <id>checkstyle</id>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-checkstyle-plugin</artifactId>
+              <version>${maven.checkstyle.version}</version>
+              <executions>
+                <execution>
+                  <goals>
+                    <goal>check</goal>
+                  </goals>
+                  <phase>process-classes</phase>
+                </execution>
+              </executions>
+              <configuration>
+                <configLocation>${root.dir}/scripts/checkstyle/larskristian_checks.xml</configLocation>
+                <suppressionsLocation>${root.dir}/scripts/checkstyle/larskristian_suppressions.xml</suppressionsLocation>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+  </profiles>
 </project>
