--- a/web-app/pom.xml
+++ b/web-app/pom.xml
@@ -43,29 +43,182 @@
       <systemPath>${root.dir}/integration-tests/target/website.integration-tests-1.0-SNAPSHOT.jar</systemPath>
     </dependency>
 
+    <dependency>
+      <groupId>net.larskristian</groupId>
+      <artifactId>website.ui</artifactId>
+      <version>${project.version}</version>
+      <scope>system</scope>
+      <systemPath>${root.dir}/ui/target/website.ui-1.0-SNAPSHOT.jar</systemPath>
+    </dependency>
+
+    <dependency>
+      <groupId>net.larskristian</groupId>
+      <artifactId>website.api</artifactId>
+      <version>${project.version}</version>
+      <scope>system</scope>
+      <systemPath>${root.dir}/api/target/website.api-1.0-SNAPSHOT.jar</systemPath>
+    </dependency>
+
+    <dependency>
+      <groupId>net.larskristian</groupId>
+      <artifactId>website.db</artifactId>
+      <version>${project.version}</version>
+      <scope>system</scope>
+      <systemPath>${root.dir}/db/target/website.db-1.0-SNAPSHOT.jar</systemPath>
+    </dependency>
+
   </dependencies>
 
-  <build>
-    <finalName>larskristian.net</finalName>
-    <plugins>
+  <profiles>
+    <profile>
+      <id>dev,test,prod</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <version>${maven.war.version}</version>
-        <configuration>
-          <webXml>${root.dir}/web-content/WEB-INF/web.xml</webXml>
-          <packagingExcludes>WEB-INF/web.xml</packagingExcludes>
-          <webResources>
-            <resource>
-              <directory>${root.dir}/core</directory>
-              <directory>${root.dir}/web-content</directory>
-            </resource>
-          </webResources>
-        </configuration>
-      </plugin>
+      <build>
+        <finalName>larskristian.net</finalName>
+        <plugins>
 
-    </plugins>
-  </build>
+          <plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>${maven.clean.version}</version>
+            <configuration>
+              <filesets>
+                <fileset>
+                  <directory>${root.dir}/web-content/WEB-INF/lib</directory>
+                  <includes>
+                    <include>**/*.jar</include>
+                  </includes>
+                  <followSymlinks>false</followSymlinks>
+                </fileset>
+              </filesets>
+            </configuration>
+          </plugin>
 
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>${maven.dependency.version}</version>
+            <executions>
+              <execution>
+                <id>copy</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>net.larskristian</groupId>
+                      <artifactId>website.core</artifactId>
+                      <type>jar</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${root.dir}/web-content/WEB-INF/lib</outputDirectory>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>net.larskristian</groupId>
+                      <artifactId>website.ui</artifactId>
+                      <type>jar</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${root.dir}/web-content/WEB-INF/lib</outputDirectory>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>net.larskristian</groupId>
+                      <artifactId>website.api</artifactId>
+                      <type>jar</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${root.dir}/web-content/WEB-INF/lib</outputDirectory>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>net.larskristian</groupId>
+                      <artifactId>website.db</artifactId>
+                      <type>jar</type>
+                      <overWrite>true</overWrite>
+                      <outputDirectory>${root.dir}/web-content/WEB-INF/lib</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>${maven.war.version}</version>
+            <executions>
+              <execution>
+                <id>war</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>war</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <webXml>${root.dir}/web-content/WEB-INF/web.xml</webXml>
+              <packagingExcludes>WEB-INF/web.xml</packagingExcludes>
+              <webResources>
+                <resource>
+                  <directory>${root.dir}/web-content</directory>
+                </resource>
+              </webResources>
+            </configuration>
+          </plugin>
+
+        </plugins>
+      </build>
+
+    </profile>
+
+    <profile>
+      <id>ui</id>
+
+      <build>
+        <finalName>larskristian.net</finalName>
+        <plugins>
+
+          <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>${maven.tomcat.version}</version>
+            <configuration>
+              <path>/</path>
+              <update>true</update>
+              <url>http://localhost/manager/text</url>
+              <username>${tomcat.user}</username>
+              <password>${tomcat.pass}</password>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>${maven.war.version}</version>
+            <executions>
+              <execution>
+                <id>war</id>
+                <phase>package</phase>
+                <goals>
+                  <goal>war</goal>
+                </goals>
+              </execution>
+            </executions>
+            <configuration>
+              <webXml>${root.dir}/web-content/WEB-INF/web.xml</webXml>
+              <packagingExcludes>WEB-INF/web.xml</packagingExcludes>
+              <webResources>
+                <resource>
+                  <directory>${root.dir}/web-content</directory>
+                </resource>
+              </webResources>
+            </configuration>
+          </plugin>
+
+        </plugins>
+      </build>
+    </profile>
+
+  </profiles>
 </project>
