--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <module>web-app</module>
     <module>unit-tests</module>
     <module>integration-tests</module>
+    <module>ui</module>
+    <module>api</module>
+    <module>db</module>
   </modules>
 
   <developers>
@@ -46,11 +49,23 @@
     <!-- Deployment -->
     <maven.tomcat.version>2.2</maven.tomcat.version>
     <maven.war.version>2.6</maven.war.version>
+    <maven.clean.version>2.6.1</maven.clean.version>
+    <maven.dependency.version>2.10</maven.dependency.version>
+    <maven.resource.version>2.7</maven.resource.version>
+    <maven.properties.version>1.0-alpha-2</maven.properties.version>
 
     <!-- Dependencies -->
     <javax.jsp.version>2.1</javax.jsp.version>
     <javax.servlet.version>3.0.1</javax.servlet.version>
+    <jstl.version>1.2</jstl.version>
+    <guava.version>18.0</guava.version>
+    <jackson.version>2.5.1</jackson.version>
 
+    <!-- Database -->
+    <apache.commons.version>2.1</apache.commons.version>
+    <hibernate.version>4.3.8.Final</hibernate.version>
+    <mysql.connector.version>5.1.34</mysql.connector.version>
+    <log4j.version>2.2</log4j.version>
   </properties>
 
   <!--<repositories>
@@ -61,6 +76,12 @@
   </repositories>-->
 
   <dependencies>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
@@ -91,6 +112,60 @@
       <artifactId>jsp-api</artifactId>
       <version>${javax.jsp.version}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-web</artifactId>
+      <version>${log4j.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>${jstl.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
+      <version>${apache.commons.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-orm</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-core</artifactId>
+      <version>${hibernate.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>${mysql.connector.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>${guava.version}</version>
     </dependency>
 
   </dependencies>
@@ -125,6 +200,7 @@
 
   <build>
     <plugins>
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -143,11 +219,12 @@
           <path>/</path>
           <update>true</update>
           <url>http://localhost/manager/text</url>
-          <username>admin</username>
-          <password>Abcd1234</password>
+          <username>${tomcat.user}</username>
+          <password>${tomcat.pass}</password>
         </configuration>
       </plugin>
     </plugins>
+
   </build>
 
   <profiles>
