--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,4 +16,16 @@
     <root.dir>${basedir}/..</root.dir>
   </properties>
 
+  <dependencies>
+
+    <dependency>
+      <groupId>net.larskristian</groupId>
+      <artifactId>website.framework</artifactId>
+      <version>${project.version}</version>
+      <scope>system</scope>
+      <systemPath>${root.dir}/framework/target/website.framework-1.0-SNAPSHOT.jar</systemPath>
+    </dependency>
+
+  </dependencies>
+
 </project>
