--- a/web-content/WEB-INF/web.xml
+++ b/web-content/WEB-INF/web.xml
@@ -24,13 +24,13 @@
   </filter-mapping>
 
   <servlet>
-    <servlet-name>mvc-dispatcher</servlet-name>
+    <servlet-name>application</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>mvc-dispatcher</servlet-name>
+    <servlet-name>application</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
