--- a/db/src/main/resources/db.properties
+++ b/db/src/main/resources/db.properties
@@ -1,3 +1,3 @@
-database.user=${db.user}
-database.pass=${db.pass}
+database.user=${lars.db.user}
+database.pass=${lars.db.pass}
 database.name=${db.name}
