--- a/scripts/settings.xml.template
+++ b/scripts/settings.xml.template
@@ -6,10 +6,11 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <db.user>your_db_username</db.user>
-        <db.pass>your_db_password</db.pass>
-        <tomcat.user>your_tomcat_username</tomcat.user>
-        <tomcat.pass>your_tomcat_password</tomcat.pass>
+        <lars.db.user>your_db_username</lars.db.user>
+        <lars.db.pass>your_db_password</lars.db.pass>
+        <lars.tomcat.user>your_tomcat_username</lars.tomcat.user>
+        <lars.tomcat.pass>your_tomcat_password</lars.tomcat.pass>
+        <lars.tomcat.port>80</lars.tomcat.port>
       </properties>
     </profile>
   </profiles>
