--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 
     <!-- Database -->
     <apache.commons.version>2.1</apache.commons.version>
+    <apache.collections.version>4.0</apache.collections.version>
     <hibernate.version>4.3.8.Final</hibernate.version>
     <mysql.connector.version>5.1.34</mysql.connector.version>
     <log4j.version>2.2</log4j.version>
@@ -144,6 +145,12 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-dbcp2</artifactId>
       <version>${apache.commons.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>${apache.collections.version}</version>
     </dependency>
 
     <dependency>
@@ -263,5 +270,34 @@
         </pluginManagement>
       </build>
     </profile>
+
+    <profile>
+      <id>pmd</id>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-pmd-plugin</artifactId>
+              <version>${maven.pmd.version}</version>
+              <executions>
+                <execution>
+                  <goals>
+                    <goal>check</goal>
+                  </goals>
+                  <phase>process-classes</phase>
+                </execution>
+              </executions>
+              <configuration>
+                <rulesets>
+                  <ruleset>${root.dir}/scripts/pmd/ruleset.xml</ruleset>
+                </rulesets>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
   </profiles>
 </project>
